--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     <h3>Rate Our service</h3>
                     <ul id="rating_comments"></ul>
                     <div id='rating'>
-                        <span>*</span>
-                        <span>*</span>
-                        <span>*</span>
-                        <span>*</span>
-                        <span>*</span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
