--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="button">
+            <button id="but">Quote</button>
+        </div>
+    </footer>
     <script src="./main.js"></script>
 </body>
 </html>
