--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <footer>
         <div class="button">
-            <button id="but">Quote</button>
+            <button id="but">Help</button>
         </div>
     </footer>
     <script src="./main.js"></script>
